--- a/index.html
+++ b/index.html
@@ -65,21 +65,21 @@
               <section class="p-5" id="Produk">
                 <div class="container">
                   <div class="row text-center g-4"> </div>
-                  <div class="col-12 mb-5">
+                  <div class="col- md-4">
                     <div class="card bg-danger-subtle text-dark border mb-5">
                       <div id="carouselExampleControls1" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="image/slingbagcream1.jpg" class="d-block w-100" alt="...">
+                            <img src="image/slingbagcream1.jpg" class="card-img-top image-fluid" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="image/slingbagcream2.jpg" class="d-block w-100" alt="...">
+                            <img src="image/slingbagcream2.jpg" class="card-img-top image-fluid" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="image/slingbagcream3.jpg" class="d-block w-100" alt="...">
+                            <img src="image/slingbagcream3.jpg" class="card-img-top image-fluid" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="image/slingbagcream4.jpg" class="d-block w-100" alt="...">
+                            <img src="image/slingbagcream4.jpg" class="card-img-top image-fluid" alt="...">
                           </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev">
@@ -244,21 +244,21 @@
                      <section>
                       <div class="container">
                         <div class="row text-center g-4"> </div>
-                        <div class="col-12 mb-5">
+                        <div class="col-md-4">
                           <div class="card bg-danger-subtle text-dark border mb-5">
                             <div id="carouselExampleControls1" class="carousel slide" data-bs-ride="carousel">
                               <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                  <img src="image/slingbagcoklat1.jpg" class="d-block w-100" alt="...">
+                                  <img src="image/slingbagcoklat1.jpg" class="card-img-top image-fluid" alt="...">
                                 </div>
                                 <div class="carousel-item">
-                                  <img src="image/slingbagcoklat2.jpg" class="d-block w-100" alt="...">
+                                  <img src="image/slingbagcoklat2.jpg" class="card-img-top image-fluid" alt="...">
                                 </div>
                                 <div class="carousel-item">
-                                  <img src="image/slingbagcoklat3.jpg" class="d-block w-100" alt="...">
+                                  <img src="image/slingbagcoklat3.jpg" class="card-img-top image-fluid" alt="...">
                                 </div>
                                 <div class="carousel-item">
-                                  <img src="image/slingbagcoklat4.jpg" class="d-block w-100" alt="...">
+                                  <img src="image/slingbagcoklat4.jpg" class="card-img-top image-fluid" alt="...">
                                 </div>
                               </div>
                               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev">
@@ -422,21 +422,21 @@
                         <section class="p-5" id="Produk">
                           <div class="container">
                             <div class="row text-center g-4"> </div>
-                            <div class="col-12 mb-5">
+                            <div class="col-md-4">
                               <div class="card bg-danger-subtle text-dark border mb-5">
                                 <div id="carouselExampleControls1" class="carousel slide" data-bs-ride="carousel">
                                   <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                      <img src="image/totebaghitam1.jpg" class="d-block w-100" alt="...">
+                                      <img src="image/totebaghitam1.jpg" class="card-img-top image-fluid" alt="...">
                                     </div>
                                     <div class="carousel-item">
-                                      <img src="image/totebaghitam2.jpg" class="d-block w-100" alt="...">
+                                      <img src="image/totebaghitam2.jpg" class="card-img-top image-fluid" alt="...">
                                     </div>
                                     <div class="carousel-item">
-                                      <img src="image/totebaghitam3.jpg" class="d-block w-100" alt="...">
+                                      <img src="image/totebaghitam3.jpg" class="card-img-top image-fluid" alt="...">
                                     </div>
                                     <div class="carousel-item">
-                                      <img src="image/totebaghitam4.jpg" class="d-block w-100" alt="...">
+                                      <img src="image/totebaghitam4.jpg" class="card-img-top image-fluid" alt="...">
                                     </div>
                                   </div>
                                   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev">
@@ -601,21 +601,21 @@
                             <section class="p-5" id="Produk">
                               <div class="container">
                                 <div class="row text-center g-4"> </div>
-                                <div class="col-12 mb-5">
+                                <div class="col-md-4">
                                   <div class="card bg-danger-subtle text-dark border mb-5">
                                     <div id="carouselExampleControls1" class="carousel slide" data-bs-ride="carousel">
                                       <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                          <img src="image/totebagcream1.jpg" class="d-block w-100" alt="...">
+                                          <img src="image/totebagcream1.jpg" class="card-img-top image-fluid" alt="...">
                                         </div>
                                         <div class="carousel-item">
-                                          <img src="image/totebagcream2.jpg" class="d-block w-100" alt="...">
+                                          <img src="image/totebagcream2.jpg" class="card-img-top image-fluid" alt="...">
                                         </div>
                                         <div class="carousel-item">
-                                          <img src="image/totebagcream3.jpg" class="d-block w-100" alt="...">
+                                          <img src="image/totebagcream3.jpg" class="card-img-top image-fluid" alt="...">
                                         </div>
                                         <div class="carousel-item">
-                                          <img src="image/totebagcream4.jpg" class="d-block w-100" alt="...">
+                                          <img src="image/totebagcream4.jpg" class="card-img-top image-fluid" alt="...">
                                         </div>
                                       </div>
                                       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev">
@@ -780,21 +780,21 @@
                                 <section class="p-5" id="Produk">
                                   <div class="container">
                                     <div class="row text-center g-4"> </div>
-                                    <div class="col-12 mb-5">
+                                    <div class="col-md-4">
                                       <div class="card bg-danger-subtle text-dark border mb-5">
                                         <div id="carouselExampleControls1" class="carousel slide" data-bs-ride="carousel">
                                           <div class="carousel-inner">
                                             <div class="carousel-item active">
-                                              <img src="image/totebagmocca1.jpg" class="d-block w-100" alt="...">
+                                              <img src="image/totebagmocca1.jpg" class="card-img-top image-fluid" alt="...">
                                             </div>
                                             <div class="carousel-item">
-                                              <img src="image/totebagmocca2.jpg" class="d-block w-100" alt="...">
+                                              <img src="image/totebagmocca2.jpg" class="card-img-top image-fluid" alt="...">
                                             </div>
                                             <div class="carousel-item">
-                                              <img src="image/totebagmocca3.jpg" class="d-block w-100" alt="...">
+                                              <img src="image/totebagmocca3.jpg" class="card-img-top image-fluid" alt="...">
                                             </div>
                                             <div class="carousel-item">
-                                              <img src="image/totebagmocca4.jpg" class="d-block w-100" alt="...">
+                                              <img src="image/totebagmocca4.jpg" class="card-img-top image-fluid" alt="...">
                                             </div>
                                           </div>
                                           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev">
