--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
       <div class="collapse navbar-collapse" id="navmenu">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a href="#Produk" class="nav-link">Product</a>
+            <a href="#produk" class="nav-link">Product</a>
           </li>
           <li class="nav-item">
-            <a href="#About" class="nav-link">About</a>
+            <a href="#about" class="nav-link">About</a>
           </li>
         </ul>
       </div>
@@ -66,7 +66,7 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
   </div>
 
   <!--produk-->
-  <section class="p-6" id="Produk">
+  <section class="p-6">
     <div class="container">
       <div class="row text-center g-4">
         <!--produk 1-->
@@ -639,7 +639,7 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
           <a href="https://www.instagram.com/olips.idn?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">
             <img src="image/hitam.png" width="100px" class="d-block mx-auto float-right">
           </a>
-          <p class="text-center text-dark mt-3">1.0</p>
+          <p class="text-center text-dark mt-3">1.2</p>
         </div>
       </div>
     </footer>
