--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
       <div class="collapse navbar-collapse" id="navmenu">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a href="#produk" class="nav-link">Product</a>
+            <a href="#product" class="nav-link">Product</a>
           </li>
           <li class="nav-item">
             <a href="#about" class="nav-link">About</a>
@@ -66,7 +66,7 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
   </div>
 
   <!--produk-->
-  <section class="p-6">
+  <section class="p-6" id="product">
     <div class="container">
       <div class="row text-center g-4">
         <!--produk 1-->
@@ -614,7 +614,7 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
     </div>
   </section>
 
-  <div class="container" id="About">
+  <div class="container" id="about">
     <footer class="p-5 bg-danger-subtle text-dark text-center">
       <div class="text-center">
         <h3><span style="color: #FF69B4;">Olips</span> adalah Tas Wanita Kombinasi Sempurna dari Gaya,
