perubahan penempatan id product, dengan <p id="product"></>

--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
   </div>
 
   <!--produk-->
-  <section class="p-6" id="product">
+  <p id="product">
+  <section class="p-6">
     <div class="container">
       <div class="row text-center g-4">
         <!--produk 1-->
@@ -613,6 +614,7 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
       </div>
     </div>
   </section>
+</p>
 
   <div class="container" id="about">
     <footer class="p-5 bg-danger-subtle text-dark text-center">
