perbahan id pke english

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
   </div>
 
   <!--produk-->
-  <p id="product">
-  <section class="p-6">
+
+  <section class="p-6" id="product">
     <div class="container">
       <div class="row text-center g-4">
         <!--produk 1-->
@@ -560,11 +560,11 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
                       <h2 class="modal-title" style="margin-top: 10px; margin-bottom: 10px;">Form Pembelian</h2>
                       <form>
                         <div class="mb-3">
-                          <label for="nama" style="float: left; margin-bottom: 10px;">nama</label>
+                          <label for="nama" style="float: left; margin-bottom: 10px;">Nama</label>
                           <input type="text" id="nama" placeholder="nama" class="form-control shadow-none" required>
                         </div>
                         <div class="mb-3">
-                          <label for="produk" style="float: left; margin-bottom: 10px;">produk</label>
+                          <label for="produk" style="float: left; margin-bottom: 10px;">Produk</label>
                           <input type="text" id="produk" class="form-control shadow-none"
                             required>
                         </div>
@@ -574,7 +574,7 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
                             class="form-control shadow-none" required>
                         </div>
                         <div class="mb-3">
-                          <label for="alamat" style="float: left; margin-bottom: 10px;">alamat</label>
+                          <label for="alamat" style="float: left; margin-bottom: 10px;">Alamat</label>
                           <input type="text" id="alamat" placeholder="alamat" class="form-control shadow-none" required>
                         </div>
                         <div class="mb-3">
@@ -614,7 +614,7 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
       </div>
     </div>
   </section>
-</p>
+
 
   <div class="container" id="about">
     <footer class="p-5 bg-danger-subtle text-dark text-center">
