--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
 
       <div class="collapse navbar-collapse" id="navmenu">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a href="#product" class="nav-link">Product</a>
-          </li>
+         
           <li class="nav-item">
             <a href="#about" class="nav-link">About</a>
           </li>
@@ -67,7 +65,7 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
 
   <!--produk-->
 
-  <section class="p-6" id="product">
+  <section class="p-6">
     <div class="container">
       <div class="row text-center g-4">
         <!--produk 1-->
