pemindahan id product di div     <div class="container" id="product">

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
         <ul class="navbar-nav ms-auto">
          
           <li class="nav-item">
+            <a href="#product" class="nav-link">Product</a>
             <a href="#about" class="nav-link">About</a>
           </li>
         </ul>
@@ -66,7 +67,7 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
   <!--produk-->
 
   <section class="p-6">
-    <div class="container">
+    <div class="container" id="product">
       <div class="row text-center g-4">
         <!--produk 1-->
         <div class="col-md-4">
