perubahan resolusi total jadi 7 mb & slide bisa klik

--- a/index.html
+++ b/index.html
@@ -57,48 +57,44 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
     </div>
   </nav>
 
-  <div class="text-center">
+  <div class="text-center" style="margin-bottom: 3rem;">
     <img class="image-fluid w-50" src="image/olps.jpg" alt="header">
     <h1 class="text-center mt-5">"Tas yang <span class="cantik" style="color: #FF69B4;">Cantik</span>, hidup yang lebih <span class="cantik" style="color: #FF69B4;">Cantik</span>."</h1>
-
-
   </div>
-
+  
   <!--produk-->
-
+        <!--produk 1-->
   <section class="p-6">
     <div class="container" id="product">
       <div class="row text-center g-4">
-        <!--produk 1-->
-        <div class="col-md-4">
-          <div class="card bg-danger-subtle text-dark border mb-5">
+        <div class="col-12 mb-5">
+          <div class="card bg-danger-subtle text-dark border mb-5">
             <div id="carouselExampleControls1" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="image/slingbagcream1.jpg" class="card-img-top image-fluid" alt="...">
+                  <img src="image/slingbagcream1.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="image/slingbagcream2.jpg" class="card-img-top image-fluid" alt="...">
+                  <img src="image/slingbagcream2.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="image/slingbagcream3.jpg" class="card-img-top image-fluid" alt="...">
+                  <img src="image/slingbagcream3.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="image/slingbagcream4.jpg" class="card-img-top image-fluid" alt="...">
+                  <img src="image/slingbagcream4.jpg" class="d-block w-100" alt="...">
                 </div>
               </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1"
-                data-bs-slide="prev">
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
               </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls1"
-                data-bs-slide="next">
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
               </button>
             </div>
 
+            
             <div class="card-body text-center">
               <h5 class="card-title text-center" id="produk-title">Olips Slingbag Cream</h5>
               <p class="card-text">
@@ -179,34 +175,31 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
         </div>
 
         <!--produk 2-->
-        <div class="col-md-4">
-          <div class="card bg-danger-subtle text-dark border mb-5">
-            <div id="carouselExampleControls1" class="carousel slide" data-bs-ride="carousel">
+        <div class="col-12 mb-5">
+          <div class="card bg-danger-subtle text-dark border">
+            <div id="carouselExampleControls2" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="image/slingbagcoklat1.jpg" class="card-img-top image-fluid" alt="...">
+                  <img src="image/slingbagcoklat1.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="image/slingbagcoklat2.jpg" class="card-img-top image-fluid" alt="...">
+                  <img src="image/slingbagcoklat2.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="image/slingbagcoklat3.jpg" class="card-img-top image-fluid" alt="...">
+                  <img src="image/slingbagcoklat3.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="image/slingbagcoklat4.jpg" class="card-img-top image-fluid" alt="...">
+                  <img src="image/slingbagcoklat4.jpg" class="d-block w-100" alt="...">
                 </div>
               </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1"
-                data-bs-slide="prev">
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls2" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
               </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls1"
-                data-bs-slide="next">
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls2" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
               </button>
-
             </div>
 
             <div class="card-body text-center">
@@ -287,35 +280,32 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
         </div>
 
         <!--produk 3-->
-        <div class="col-md-4">
-          <div class="card bg-danger-subtle text-dark border mb-5">
-            <div id="carouselExampleControls1" class="carousel slide" data-bs-ride="carousel">
+        <div class="col-12 mb-5">
+          <div class="card bg-danger-subtle text-dark border">
+            <div id="carouselExampleControls3" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="image/totebaghitam1.jpg" class="card-img-top image-fluid" alt="...">
+                  <img src="image/totebaghitam1.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="image/totebaghitam2.jpg" class="card-img-top image-fluid" alt="...">
+                  <img src="image/totebaghitam2.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="image/totebaghitam3.jpg" class="card-img-top image-fluid" alt="...">
+                  <img src="image/totebaghitam3.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="image/totebaghitam4.jpg" class="card-img-top image-fluid" alt="...">
+                  <img src="image/totebaghitam4.jpg" class="d-block w-100" alt="...">
                 </div>
               </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1"
-                data-bs-slide="prev">
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls3" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
               </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls1"
-                data-bs-slide="next">
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls3" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
               </button>
             </div>
-
             <div class="card-body text-center">
               <h5 class="card-title text-center" id="produk-title">Tote Bag Olips Hitam</h5>
               <p class="card-text">
@@ -395,30 +385,28 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
         </div>
 
         <!--produk 4-->
-        <div class="col-md-4">
-          <div class="card bg-danger-subtle text-dark border mb-5">
-            <div id="carouselExampleControls1" class="carousel slide" data-bs-ride="carousel">
+        <div class="col-12 mb-5">
+          <div class="card bg-danger-subtle text-dark border">
+            <div id="carouselExampleControls4" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="image/totebagcream1.jpg" class="card-img-top image-fluid" alt="...">
+                  <img src="image/totebagcream1.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="image/totebagcream2.jpg" class="card-img-top image-fluid" alt="...">
+                  <img src="image/totebagcream2.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="image/totebagcream3.jpg" class="card-img-top image-fluid" alt="...">
+                  <img src="image/totebagcream3.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="image/totebagcream4.jpg" class="card-img-top image-fluid" alt="...">
+                  <img src="image/totebagcream4.jpg" class="d-block w-100" alt="...">
                 </div>
               </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1"
-                data-bs-slide="prev">
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls4" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
               </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls1"
-                data-bs-slide="next">
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls4" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
               </button>
@@ -504,30 +492,28 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
         </div>
 
         <!--produk 5-->
-        <div class="col-md-4">
-          <div class="card bg-danger-subtle text-dark border mb-5">
-            <div id="carouselExampleControls1" class="carousel slide" data-bs-ride="carousel">
+        <div class="col-12 mb-5">
+          <div class="card bg-danger-subtle text-dark border">
+            <div id="carouselExampleControls5" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="image/totebagmocca1.jpg" class="card-img-top image-fluid" alt="...">
+                  <img src="image/totebagmocca1.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="image/totebagmocca2.jpg" class="card-img-top image-fluid" alt="...">
+                  <img src="image/totebagmocca2.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="image/totebagmocca3.jpg" class="card-img-top image-fluid" alt="...">
+                  <img src="image/totebagmocca3.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="image/totebagmocca4.jpg" class="card-img-top image-fluid" alt="...">
+                  <img src="image/totebagmocca4.jpg" class="d-block w-100" alt="...">
                 </div>
               </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1"
-                data-bs-slide="prev">
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls5" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
               </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls1"
-                data-bs-slide="next">
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls5" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
               </button>
@@ -640,10 +626,11 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
           <a href="https://www.instagram.com/olips.idn?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">
             <img src="image/hitam.png" width="100px" class="d-block mx-auto float-right">
           </a>
-          <p class="text-center text-dark mt-3">1.2</p>
+          <p class="text-center text-dark mt-3">1.3</p>
         </div>
       </div>
     </footer>
+
     <script>
       const judul1 = document.getElementById('judul-produk-1').textContent;
       localStorage.setItem('judul-1', judul1);
