--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
             <img src="image/pos.png" width="100px" class="d-block mx-auto float-left">
           </a>
           <h3 class="text-dark mt-3 float-right">Follow Us</h3>
-          <a href="https://www.instagram.com/olips.idn?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">
+          <a href="https://www.instagram.com/olips.id?igsh=MXYxdDJhNHIxb3lsYw==">
             <img src="image/hitam.png" width="40px" class="d-block mx-auto float-right">
           </a>
           <p class="text-center text-dark mt-3">Est. 2020</p>
