--- a/index.html
+++ b/index.html
@@ -30,17 +30,14 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
 </head>
 
 <body>
- 
-<nav class="navbar navbar-expand-lg bg-danger-subtle navbar-light mb-5 sticky-top">
-  <div class="container d-flex justify-content-center">
-    <a href="#" class="navbar-brand text-center" style="font-weight: bold; color: black;">
-     
-<h3 style="font-size: 2em;">OLIPS</h3>
-
-
-    </a>
-  </div>
-</nav>
+  <nav class="navbar navbar-expand-lg bg-danger-subtle navbar-light mb-5 sticky-top">
+    <div class="container d-flex justify-content-center">
+      <a href="#" class="navbar-brand text-center" style="font-weight: bold; color: black;">
+        <h3 style="font-size: 2em;">OLIPS</h3>
+      </a>
+    </div>
+  </nav>
+  
 <div class="content-placeholder mt-nav">
   <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-below d-flex flex-column align-items-end" style="margin-top: -50px;">
     <button class="navbar-toggler" style="margin-right: 20px;" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
@@ -79,7 +76,7 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
         <!--produk 1-->
   <section class="p-6">
     <div class="container" id="product">
-      <div class="row text-center g-4">
+      <div class="row text-center g-5">
         <div class="col-md-4">     
           <div class="card bg-danger-subtle text-dark border">
             <div id="carouselExampleControls1" class="carousel slide" data-bs-ride="carousel">
@@ -144,7 +141,7 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
                         </div>
                         <div class="mb-3">
                           <label for="nomor-whatsapp" style="float: left; margin-bottom: 10px;">Nomor Whatsapp</label>
-                          <input type="text" id="nomor-whatsapp" placeholder="Nomor Whatsapp"
+                          <input type="text" id="nomor-whatsapp" placeholder="nomor Whatsapp"
                             class="form-control shadow-none" required>
                         </div>
                         <div class="mb-3">
@@ -249,7 +246,7 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
                         </div>
                         <div class="mb-3">
                           <label for="nomor-whatsapp" style="float: left; margin-bottom: 10px;">Nomor Whatsapp</label>
-                          <input type="text" id="nomor-whatsapp" placeholder="Nomor Whatsapp"
+                          <input type="text" id="nomor-whatsapp" placeholder="nomor Whatsapp"
                             class="form-control shadow-none" required>
                         </div>
                         <div class="mb-3">
@@ -354,7 +351,7 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
                         </div>
                         <div class="mb-3">
                           <label for="nomor-whatsapp" style="float: left; margin-bottom: 10px;">Nomor Whatsapp</label>
-                          <input type="text" id="nomor-whatsapp" placeholder="Nomor Whatsapp"
+                          <input type="text" id="nomor-whatsapp" placeholder="nomor Whatsapp"
                             class="form-control shadow-none" required>
                         </div>
                         <div class="mb-3">
@@ -461,7 +458,7 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
                         </div>
                         <div class="mb-3">
                           <label for="nomor-whatsapp" style="float: left; margin-bottom: 10px;">Nomor Whatsapp</label>
-                          <input type="text" id="nomor-whatsapp" placeholder="Nomor Whatsapp"
+                          <input type="text" id="nomor-whatsapp" placeholder="nomor Whatsapp"
                             class="form-control shadow-none" required>
                         </div>
                         <div class="mb-3">
@@ -567,7 +564,7 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
                         </div>
                         <div class="mb-3">
                           <label for="nomor-whatsapp" style="float: left; margin-bottom: 10px;">Nomor Whatsapp</label>
-                          <input type="text" id="nomor-whatsapp" placeholder="Nomor Whatsapp"
+                          <input type="text" id="nomor-whatsapp" placeholder="nomor Whatsapp"
                             class="form-control shadow-none" required>
                         </div>
                         <div class="mb-3">
@@ -615,7 +612,7 @@ src="https://www.facebook.com/tr?id=669166719048894&ev=PageView&noscript=1"
 
   <div class="container" id="about">
     <footer class="p-6 bg-danger-subtle text-dark text-center">
-      <div class="text-center">
+      <div class="text-center mt-5">
         <h3><span style="color: #FF69B4;">Olips</span> adalah Tas Wanita Kombinasi Sempurna dari Gaya,
            Fungsi, dan Kualitas. dengan Desain yang Elegan,
             dan Bahan yang Berkualitas, Tas wanita <span style="color: #FF69B4;">Olips</span> adalah pilihan tepat untuk Anda yang ingin tampil Stylish,
