--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
         </div>
         <h3 class="text-dark mt-3">Shipping by</h3>
         <a href="https://www.posaja.co.id/">
-          <img src="image/pos.png" width="100px" class="d-block mx-auto float-left">
+          <img src="image/lp.jpg" height="50px" class="d-block mx-auto float-left">
         </a>
         <h3 class="text-dark mt-3 text-center" id="socmed">Follow Us</h3>
         <div class="d-flex justify-content-center">
@@ -766,7 +766,7 @@
         
           
           <p class="text-center text-dark mt-3">Est. 2020</p>
-          <p class="text-center text-dark mb-3">2.0</p>
+          <p class="text-center text-dark mb-3">2.1</p>
         </div>
       </div>
     </footer>
